[package]
name = "klieacharts-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "2.0", features = ["postgres"] }
actix-web-actors = "4"
serde = { version = "1.0", features = ["derive"] }
actix = "0.12"
tokio = { version = "1", features = ["full"] }
env_logger = "0.9"
